# cargo-features = ["codegen-backend"]

[package]
name = "cch23-ad-ops"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
shuttle-axum = "0.34.1"
shuttle-runtime = "0.34.1"
tokio = "1.28.2"
tracing = "0.1.40"


# [profile.dev]
# codegen-backend = "cranelift"